--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "mac-x64": true, 
         "nw_version": "0.12.3", 
         "force_download": false, 
-        "linux-x64": false
+        "linux-x64": true
     }, 
     "app_name": "socks", 
     "nodejs": true, 
@@ -43,23 +43,23 @@
     "single-instance": false, 
     "window": {
         "fullscreen": false, 
+        "kiosk_emulation": false, 
         "resizable": true, 
-        "title": "shadowsocks node", 
+        "show": true, 
         "always-on-top": false, 
         "frame": true, 
-        "show": true, 
+        "title": "shadowsocks node", 
         "kiosk": false, 
         "height": 400, 
         "exe_icon": "", 
         "visible": true, 
         "as_desktop": false, 
-        "width": 320, 
-        "mac_icon": "", 
+        "toolbar": false, 
         "position": "mouse", 
         "show_in_taskbar": true, 
-        "kiosk_emulation": false, 
+        "mac_icon": "", 
+        "width": 320, 
         "transparent": false, 
-        "toolbar": false, 
         "icon": ""
     }, 
     "version": "1.0.0", 
