--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
     "webexe_settings": {
-        "linux-x32": false, 
-        "export_dir": "output", 
-        "windows-x64": true, 
-        "uncompressed_folder": true, 
-        "download_dir": "/Users/huangyao/Library/Application Support/Web2Executable/files/downloads", 
-        "nw_compression_level": 9, 
-        "mac-x32": false, 
-        "custom_script": "", 
-        "windows-x32": false, 
-        "mac-x64": true, 
-        "nw_version": "0.12.3", 
-        "force_download": false, 
-        "linux-x64": true
-    }, 
-    "app_name": "socks", 
-    "nodejs": true, 
+        "linux-x32": false,
+        "export_dir": "output",
+        "windows-x64": false,
+        "uncompressed_folder": true,
+        "download_dir": "/Users/huangyao/Library/Application Support/Web2Executable/files/downloads",
+        "nw_compression_level": 9,
+        "mac-x32": false,
+        "custom_script": "",
+        "windows-x32": false,
+        "mac-x64": true,
+        "nw_version": "0.12.3",
+        "force_download": false,
+        "linux-x64": false
+    },
+    "app_name": "socks",
+    "nodejs": true,
     "additional_trust_anchors": [
         ""
-    ], 
-    "inject-js-end": "", 
-    "keywords": [], 
-    "node-main": "", 
+    ],
+    "inject-js-end": "",
+    "keywords": [],
+    "node-main": "",
     "dependencies": {
         "fs-extra": "^0.26.4"
-    }, 
-    "node-remote": "", 
+    },
+    "node-remote": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
-    }, 
+    },
     "webkit": {
-        "page-cache": false, 
-        "java": false, 
+        "page-cache": false,
+        "java": false,
         "plugin": false
-    }, 
-    "js-flags": "", 
-    "description": "", 
-    "name": "socks", 
-    "license": "ISC", 
-    "author": "huangyao <huangyaobyte@gmail.com> (http://www.backblog.me)", 
-    "user-agent": "", 
-    "single-instance": false, 
+    },
+    "js-flags": "",
+    "description": "",
+    "name": "socks",
+    "license": "ISC",
+    "author": "huangyao <huangyaobyte@gmail.com> (http://www.backblog.me)",
+    "user-agent": "",
+    "single-instance": false,
     "window": {
-        "fullscreen": false, 
-        "resizable": true, 
-        "show": true, 
-        "always-on-top": false, 
-        "frame": true, 
-        "title": "shadowsocks node", 
-        "kiosk": false, 
-        "kiosk_emulation": false, 
-        "exe_icon": "", 
-        "visible": true, 
-        "transparent": false, 
-        "as_desktop": false, 
-        "width": 320, 
-        "position": "mouse", 
-        "show_in_taskbar": true, 
-        "height": 400, 
-        "mac_icon": "", 
-        "toolbar": false, 
+        "fullscreen": false,
+        "resizable": true,
+        "title": "shadowsocks node",
+        "always-on-top": false,
+        "frame": true,
+        "show": true,
+        "kiosk": false,
+        "kiosk_emulation": false,
+        "exe_icon": "",
+        "visible": true,
+        "as_desktop": false,
+        "width": 320,
+        "mac_icon": "",
+        "position": "mouse",
+        "show_in_taskbar": true,
+        "height": 400,
+        "transparent": false,
+        "toolbar": true, 
         "icon": ""
-    }, 
-    "version": "1.0.0", 
-    "snapshot": "", 
-    "inject-js-start": "", 
-    "main": "./ui/index.html", 
+    },
+    "version": "1.0.0",
+    "snapshot": "",
+    "inject-js-start": "",
+    "main": "./ui/index.html",
     "chromium-args": ""
 }
