fix addr type 1 and 4  resolve error

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "webexe_settings": {
         "linux-x32": false,
         "export_dir": "output",
-        "windows-x64": false,
+        "windows-x64": true,
         "uncompressed_folder": true,
         "download_dir": "/Users/huangyao/Library/Application Support/Web2Executable/files/downloads",
         "nw_compression_level": 9,
@@ -12,7 +12,7 @@
         "mac-x64": true,
         "nw_version": "0.12.3",
         "force_download": false,
-        "linux-x64": false
+        "linux-x64": true
     },
     "app_name": "socks",
     "nodejs": true,
@@ -44,22 +44,22 @@
     "window": {
         "fullscreen": false,
         "resizable": true,
-        "title": "shadowsocks node",
+        "show": true,
         "always-on-top": false,
         "frame": true,
-        "show": true,
+        "title": "shadowsocks node",
         "kiosk": false,
-        "kiosk_emulation": false,
+        "height": 400,
         "exe_icon": "",
         "visible": true,
+        "transparent": false,
         "as_desktop": false,
         "width": 320,
-        "mac_icon": "",
         "position": "mouse",
         "show_in_taskbar": true,
-        "height": 400,
-        "transparent": false,
-        "toolbar": true, 
+        "kiosk_emulation": false,
+        "mac_icon": "",
+        "toolbar": false, 
         "icon": ""
     },
     "version": "1.0.0",
