--- a/package.json
+++ b/package.json
@@ -1,70 +1,45 @@
 {
-    "webexe_settings": {
-        "linux-x32": false,
-        "export_dir": "output",
-        "windows-x64": true,
-        "uncompressed_folder": true,
-        "download_dir": "/Users/huangyao/Library/Application Support/Web2Executable/files/downloads",
-        "nw_compression_level": 9,
-        "mac-x32": false,
-        "custom_script": "",
-        "windows-x32": false,
-        "mac-x64": true,
-        "nw_version": "0.12.3",
-        "force_download": false,
-        "linux-x64": true
-    },
-    "app_name": "socks",
-    "nodejs": true,
-    "additional_trust_anchors": [
-        ""
-    ],
-    "inject-js-end": "",
-    "keywords": [],
-    "node-main": "",
-    "dependencies": {
-        "fs-extra": "^0.26.4"
-    },
-    "node-remote": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "webkit": {
-        "page-cache": false,
-        "java": false,
-        "plugin": false
-    },
-    "js-flags": "",
-    "description": "",
-    "name": "socks",
-    "license": "ISC",
-    "author": "huangyao <huangyaobyte@gmail.com> (http://www.backblog.me)",
-    "user-agent": "",
-    "single-instance": false,
-    "window": {
-        "fullscreen": false,
-        "resizable": true,
-        "show": true,
-        "always-on-top": false,
-        "frame": true,
-        "title": "shadowsocks node",
-        "kiosk": false,
-        "height": 400,
-        "exe_icon": "",
-        "visible": true,
-        "transparent": false,
-        "as_desktop": false,
-        "width": 320,
-        "position": "mouse",
-        "show_in_taskbar": true,
-        "kiosk_emulation": false,
-        "mac_icon": "",
-        "toolbar": false, 
-        "icon": ""
-    },
-    "version": "1.0.0",
-    "snapshot": "",
-    "inject-js-start": "",
-    "main": "./ui/index.html",
-    "chromium-args": ""
+  "app_name": "socks",
+  "nodejs": true,
+  "keywords": [],
+  "dependencies": {
+    "fs-extra": "^0.26.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/electron-packager/cli.js . --platform=darwin --arch=x64"
+  },
+  "description": "",
+  "name": "socks",
+  "license": "ISC",
+  "author": "huangyao <huangyaobyte@gmail.com> (http://www.backblog.me)",
+  "window": {
+    "fullscreen": false,
+    "resizable": true,
+    "show": true,
+    "always-on-top": false,
+    "frame": true,
+    "title": "shadowsocks node",
+    "kiosk": false,
+    "height": 400,
+    "exe_icon": "",
+    "visible": true,
+    "transparent": false,
+    "as_desktop": false,
+    "width": 320,
+    "position": "mouse",
+    "show_in_taskbar": true,
+    "kiosk_emulation": false,
+    "mac_icon": "",
+    "toolbar": false,
+    "icon": ""
+  },
+  "version": "1.0.0",
+  "snapshot": "",
+  "main": "main.js",
+  "chromium-args": "",
+  "devDependencies": {
+    "electron": "^1.4.5",
+    "electron-packager": "^8.2.0"
+  }
 }
