--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "host": "",
+  "host": "139.162.89.128",
   "port": "9191",
   "local_port": "8082",
-  "passwd": "",
+  "passwd": "Huangyao1",
   "method": "aes-256-cfb"
 }
