--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "app_name": "socks",
+  "productName":"socks",
   "nodejs": true,
   "keywords": [],
   "dependencies": {
@@ -7,7 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/electron-packager/cli.js . --platform=darwin --arch=x64"
+    "build": "./node_modules/electron-packager/cli.js . --platform=darwin --arch=x64",
+    "pack": "build --dir",
+    "dist": "build"
   },
   "description": "",
   "name": "socks",
@@ -40,6 +43,6 @@
   "chromium-args": "",
   "devDependencies": {
     "electron": "^1.4.5",
-    "electron-packager": "^8.2.0"
+    "electron-packager": "^8.4.0"
   }
 }
