--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "main": "main.js",
   "chromium-args": "",
   "devDependencies": {
-    "electron": "^1.4.5",
-    "electron-packager": "^8.4.0"
+    "electron": "1.4.13",
+    "electron-packager": "8.4.0"
   }
 }
