--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/electron-packager/cli.js . --platform=darwin --arch=x64 --icon=./ui/img/sunTemplate.png",
+    "build": "./node_modules/electron-packager/cli.js . --platform=darwin --arch=x64 --icon=./ui/img/sunTemplate.png --overwrite",
     "pack": "build --dir",
     "dist": "build"
   },
