--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
   "host": "127.0.0.1",
   "port": "8081",
   "local_port": "8082",
-  "passwd": "PASSWD",
+  "passwd": "YOU_PASSWORD",
   "method": "aes-256-cfb"
 }
